Problem description: in Version: 4.2.0.0.alpha1 Build ID: c2b9ad37f8a8de9c7dbdd76c86aecf6388107056 you can not scroll down in Writer or Calc, you can scroll up but not down Steps to reproduce: 1. open Writer or Calc and try to scroll down 2. .... 3. .... Current behavior: nothing happens Expected behavior: scroll down Version: 4.2.0.0.alpha1 Build ID: c2b9ad37f8a8de9c7dbdd76c86aecf6388107056 Operating System: Mac OS X Version: 4.2.0.0.alpha0+ Master Last worked in: 4.1.3.2 rc
os: mac osx 10.9
Dangit, I can reproduce this behavior, tested using Mac OSX 10.9 with LibreOffice Version: 4.2.0.0.alpha1 Build ID: 496e2be9dd6eb96d120d412760422eaa904b7f71 Going to nominate as MAB4.2
side note: The only way to scroll down is to drag the scrollbar down. Scrolling up isn't affected.
Thomas, Joren: where do you find those alpha builds? You are all building them yourself?
(In reply to comment #4) > Thomas, Joren: where do you find those alpha builds? You are all building > them yourself? http://dev-builds.libreoffice.org/pre-releases/mac/ :)
#libreoffice-dev: > Nov 07 09:50:36 <tml> sberg: most likely 4e7495ac2cb6b015ad492def45fd24f4ba0f54f8 causes the scrolling problem > Nov 07 09:50:38 <IZBot> core - Fix for iOS scroll by pixels, and pinch to zoom - http://cgit.freedesktop.org/libreoffice/core/commit/?id=4e7495ac2cb6b015ad492def45fd24f4ba0f54f8
*** Bug 71348 has been marked as a duplicate of this bug. ***
Raising to high. Is this isn’t high or even highest I don’t know what would be.
The bot isn't auto-commenting on the bug when a commit is made related to this bug. Thanks to Tor during the week-end: http://cgit.freedesktop.org/libreoffice/core/commit/?id=07032e5a6ef2fa42229e8bbf5219935beefa2447 Not tested yet. Kind regards and thanks for your work related to OSX and other parts in LibreOffice Tor! Much appreciated :) Kind regards, Joren
Thanks to the OS X nightly back in working state I'm able to verify this fix (first nightly since the old nightly machine died :) Tor, thanks so much this was a real road-blocker. Setting to RESOLVED FIXED.
Migrating Whiteboard tags to Keywords: (regression) [NinjaEdit]